--- a/ToDo.txt
+++ b/ToDo.txt
@@ -2,8 +2,9 @@ Task updates since 24-10-2016
 ================================================================================
 
 To Do:
-- ZombiePool - constructor should generate start bunch of zombies in random positions
 * all files - check if encapsulation issue can be refactored
+* remove camelCase, because it's not common in Python (PEP8)
 
 --------------------------------------------------------------------------------
 Done:
+- ZombiePool - constructor should generate start bunch of zombies in random positions
