Detecting collision with Player was added in Zombie class

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -23,3 +23,5 @@ Done:
 + steering behaviours:
   - seek
   - flee
+- detecting collisions with zombies (Zombie + Player classes)
+- add collision detection with obstacles in Zombie class
