Taks List Update

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,8 +3,7 @@ Task updates since 24-10-2016
 
 To Do:
 + implement zombie bot AI:
-  - obstacle avoidance
-     * wall avoidance ?
+  - wall avoidance
   - evade
   - pursuit
   + group behaviours
@@ -27,5 +26,6 @@ Done:
   - seek
   - flee
   - wandern
+  - obstacle avoidance
 - detecting collisions with zombies (Zombie + Player classes)
 - add collision detection with obstacles in Zombie class
