--- a/ToDo.txt
+++ b/ToDo.txt
@@ -42,6 +42,7 @@ Done:
 - ZombiePool - constructor should generate start bunch of zombies in random positions
 * remove camelCase, because it's not common in Python (PEP8)
 - redesign class Vector2D
+- redesign class Vector2D, v2
 - add functions for adding/substracting two wectors (but not as part of Vector2D)
 - ADD DEBUG DRAW MODE
 + steering behaviours:
