--- a/ToDo.txt
+++ b/ToDo.txt
@@ -11,8 +11,8 @@ SPEC:
   - all above stuff must be done AFTER calculating ALL steering forces (or it
     will soon messed up)
 - adjust steering forces weights
-- there are problems with truncating death ray (possible bug in selecting space
-  for searching obstacles)
+- let zombies hurt player
+- there's a problem with counting score
 
 
 
@@ -65,6 +65,8 @@ DONE SPEC:
 - adjust game world for drawing GUI
 - fix wall_avoidance
 - make some spatial partitioning for locating zombies
+- there are problems with truncating death ray (possible bug in selecting space
+  for searching obstacles)
 
 
 
